Permit changing the internal value of invalid dates. Fixes the BBC UK Weather page..

BUG:136992

svn path=/branches/KDE/3.5/kdelibs/; revision=603351